Fixes bug 83866 (text input box is too small in 1.0 bug filing UI).

--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -96,6 +96,7 @@ input.urlTextType {width: 100%;}
 .formHelp {margin-bottom: 1em;}
 textarea {width: 100%;}
 .discreet {font-size: 75%;}
+table.form {width: 100%;}
 
 /* --- Other --- */
 
