--- a/lib/canonical/launchpad/templates/new-template.html
+++ b/lib/canonical/launchpad/templates/new-template.html
@@ -76,7 +76,7 @@
       <span>Bugs</span>
       <span>Specifications</span>
       <span>Translations</span>
-      <span>Support</span>
+      <span>Abswers</span>
     </div>
     <div id="immediateobjectheading" style="background-color: #ccf;">
       <p class="secondary">immediateobjectheading secondary</p>
