--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -831,6 +831,7 @@ ul.languages, li.languages           {list-style-image: url(/@@/languages);}
 ul.locked, li.locked                 {list-style-image: url(/@@/locked);}
 ul.mail, li.mail                     {list-style-image: url(/@@/mail);}
 ul.milestone, li.milestone           {list-style-image: url(/@@/milestone);}
+ul.news, li.news /* XXX /@@/news */  {list-style-image: url(/@@/blueprint);}
 ul.package.binary, li.package.binary {list-style-image: url(/@@/pkg-binary);}
 ul.package.source, li.package.source {list-style-image: url(/@@/pkg-source);}
 ul.person, li.person                 {list-style-image: url(/@@/person);}
@@ -1283,9 +1284,10 @@ table#applications td {padding-right: 20px; text-align: right;}
   clear: left; /* Bugs FP */
   font-size: 1.5em;
   margin: auto;
-  padding: 2em 0;
+  padding: 1em 0; /* FP should fit in ~750px */
   width: auto;
 }
+.tab-unknown .central {font-size: 1.75em;}
 .central input {
   font-size: 1em;
 }
@@ -1343,7 +1345,7 @@ div.right div.portlet { /* is this necessary? */
 }
 div.columns div.right div.portlet {border: none; padding: 0;} /* BlueprintsFP */
 
-div.three.column {width: 33%;}
+div.three.column {width: 30%; margin-right: 3%;}
 div.three.column.left, div.three.column.middle, div.three.column.right {
   clear: none;
   float: left;
