Moves application front page headings to the right of the watermark.

--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -705,8 +705,6 @@ ul#applicationchooser li#applicationchooser_selected {
 #singlecolumn h1 {
   padding-bottom: 0;
   padding-top: 1em;
-  position: relative;
-  z-index: 1;
 }
 * html #singlecolumn h1 {padding-top: 0;}
 #mainarea div.t {
@@ -1268,11 +1266,11 @@ body {
 
 /* -- Front pages -- */
 
-#applications {clear: both; padding: 1em 0; width: 100%;}
-div#applications {text-align: center;}
+#applications {clear: both; width: 100%;}
+div#applications {padding: 1em 0; text-align: center;}
 table#applications {margin-bottom: -0.5em;}
 table#applications th, table#applications td {vertical-align: baseline;}
-table#applications th {text-align: left;}
+table#applications th {padding-left: 100px; text-align: left;}
 table#applications td {padding-right: 20px; text-align: right;}
 #applications span {
   display: inline-block;
