--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -1236,7 +1236,7 @@ body {
 }
 #singlecolumn #container {
   padding-left: 20px;
-  padding-top: 60px;
+  padding-top: 50px;
 }
 #maincontent, #portlets {
   display: inline;
@@ -1259,7 +1259,7 @@ body {
 #portlets .portlet {
   width: 200px;
 }
-#singlecolumn {margin: 20px 20px 20px 38px;} /* test: front page, Oops page */
+#singlecolumn {margin: 20px 20px 0 38px;} /* test: front page, FAQ page */
 #mainarea #singlecolumn {margin-right: 0;}
 
 /* ====== Content area styles ====== */
@@ -1296,6 +1296,7 @@ div.bordered {
 #application-summary, #application-footer {
   font-size: 1.5em;
   line-height: 1.5em;
+  margin-top: 0;
   width: 50%;
 }
 #application-footer {
