Tidies up 'Top contributors' page. Adds involved and not-involved icons.

--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -76,7 +76,7 @@ body {margin: 0; padding: 0;}
 h1, h2, h3, h4, h5, h6 {background: none; color: #83ad23; font-weight: normal;}
 h1 {font-size: 3em;    margin: 0;              padding: 0px 0px 10px 0px;}
 h2 {font-size: 1.75em; margin: 1em 0 0.75em;   padding: 0;} /* FP; /products */
-h3 {font-size: 1.25em; margin: 1em 0 0 0;      padding: 0;}
+h3 {font-size: 1.25em; margin: 1em 0 0.5em 0;  padding: 0;} /* +topcontributors */
 h4 {font-size: 1em;    margin: 0;              padding: 0px 0px 10px 0px;}
 h5 {font-size: 1em;    margin: 0;              padding: 0;}
 h6 {font-size: 1em;    margin: 0;              padding: 0;}
@@ -661,7 +661,6 @@ ul#applicationchooser li#applicationchooser_selected {
 }
 #structuralobjectheading {
   background: none;
-  border: 1px solid red;
   color: black;
   float: left;
   margin: 10px 0px 0px 38px;
