Removes hidden icons from Actions menu, fixing bug 85304 (Cut-off action menu icons in Opera 9.10), and hopefully making Launchpad a bit faster. Also tweaks the Actions menu item padding.

--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -553,11 +553,7 @@ ul#applicationchooser li#applicationchooser_selected {
 #actions li {
   margin: 0;
 }
-#actions li a {
-  width: 180px;
-  display: block;
-  padding: 4px;
-}
+#actions a {display: block; padding: 4px;}
 #actions li a:hover {
   background-color: #fff;
   text-decoration: underline;
