calculating cut off values for small and large cloud sizes, fixing product->project

--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -1511,8 +1511,8 @@ th.descending {
   color: #00f;
 }
 .cloud-shade-medium { 
-  color: #99f;
+  color: #7878ff;
 }
 .cloud-shade-light {
-  color: #ccf;
+  color: #b8b8ff;
 }
