Fixes bug 82249 (Actions menu items should have action-y bullets), with funky CSS to make the highlighting work right and to decrapify the Actions menu in Internet Explorer.

--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -548,17 +548,19 @@ ul#applicationchooser li#applicationchooser_selected {
   overflow: hidden;
   margin: 0;
   padding: 4px;
-  list-style: none;
 }
 #actions li {
-  margin: 0;
+  padding: 1px 0; /* Works around a bug that makes items taller in WinIE. */
+  list-style-image: url(/+icing/action.png);
+  list-style-type: circle; /* A fallback in case the image can't be found. */
+  margin-left: 18px; /* Neutralizes typical UA outdenting of list bullets. */ 
 }
-#actions a {display: block; padding: 4px;}
-#actions li a:hover {
-  background-color: #fff;
-  text-decoration: underline;
+#actions li:hover {background-color: #fff; text-decoration: underline;}
+#actions a {
+  display: block; /* Makes the clickable area equal to the highlighted area. */
+  margin-left: -18px; /* Extends the highlighted area to include the bullet. */
+  padding: 3px 4px 3px 14px; /* 14px on the left makes room for the bullet. */ 
 }
-
 #globalsearch {
   width: 220px;
   float: right;
