--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -1515,3 +1515,6 @@ th.descending {
 .cloud-shade-light {
   color: #b8b8ff;
 }
+
+.vcsimportSUCCESS {} /* inherited text color */
+.vcsimportFAILURE {color: Red;}
