--- a/lib/canonical/launchpad/templates/launchpad.css
+++ b/lib/canonical/launchpad/templates/launchpad.css
@@ -199,3 +199,17 @@ ul.menuroot {
 #menuroot li {
   list-style-image: none;
 }
+.popup_div {
+  display: none;
+}
+
+.popup_div iframe {
+  background: white;
+  position: absolute;
+  border: 1px solid gray;
+  left: 0;
+  z-index: 100;
+  width: 100%; 
+  height: 100%;
+  margin: 0;
+}
