--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -111,6 +111,12 @@ h1:first-child, h2:first-child, h3:first-child, h4:first-child {margin-top: 0;}
 .warning.message, .warning .message {
   background-image: url(/@@/warning);
 }
+.helpwanted {background-color: #fafca9; color: black; border: 1px solid black; 
+    padding: 0.5em; font-size: smaller; padding-left: 3em
+}
+.helpwanted.message, .helpwanted .message {
+  background-image: url(/@@/helpwanted);
+}
 .informational {background-color: #fcfc99; color: black;}
 .informational.message, .informational .message {
   background-image: url(/@@/info);
