--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -840,8 +840,8 @@ ul.locked, li.locked                 {list-style-image: url(/@@/locked);}
 ul.mail, li.mail                     {list-style-image: url(/@@/mail);}
 ul.milestone, li.milestone           {list-style-image: url(/@@/milestone);}
 ul.news, li.news                     {list-style-image: url(/@@/news);}
-ul.package.binary, li.package.binary {list-style-image: url(/@@/pkg-binary);}
-ul.package.source, li.package.source {list-style-image: url(/@@/pkg-source);}
+ul.package.binary, li.package.binary {list-style-image: url(/@@/package-binary);}
+ul.package.source, li.package.source {list-style-image: url(/@@/package-source);}
 ul.person, li.person                 {list-style-image: url(/@@/person);}
 ul.product, li.product               {list-style-image: url(/@@/product);}
 dl.products>dt:before                {content: url(/@@/product);}
