--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -427,7 +427,14 @@ ul#applicationchooser li {
   text-align: center;
   font-weight: bold;
   color: #000000;
-  padding: 8px 0px 0px 0px;
+  /*padding: 8px 0px 0px 0px;*/
+	padding: 0;
+}
+ul#applicationchooser li a {
+	display: block;
+	height: 100%;
+	margin: 0;
+	padding: 8px 0 0 0;
 }
 ul#applicationchooser li:hover {
   background-position: 0px 0px;
