--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -267,9 +267,10 @@ hr, #globalheader label {
   width: 380px;
 }
 #globalfooter {
+  border-top: 1px solid #ccc;
   clear: both;
   position: relative;
-  margin: 0px 22px 0px 52px;
+  margin: 0px 22px 0px 40px;
   padding-top: 10px;
   padding-bottom: 20px;
 }
@@ -278,20 +279,17 @@ hr, #globalheader label {
 }
 #colophon {
   float: left;
-  width: 45%;
+  width: 49%;
 }
 #applications-footer {
   float: right;
   text-align: right;
-  width: 45%;
+  width: 49%;
 }
 #copyright {
-  clear: left;
-  float: left;
-  margin-top: 0.5em;
-  border-top: 1px solid #ccc;
-  padding: 0.5em 0 1em;
-  width: auto;
+  float: right;
+  text-align: right;
+  width: 45%;
 }
 .clear {
   clear: both;
